fix search button alignment

--- a/scss/layout/_global-overrides.scss
+++ b/scss/layout/_global-overrides.scss
@@ -417,3 +417,8 @@ aside.right-off-canvas-menu{
 }
 
 
+//drupal form submit button
+.views-exposed-form .views-exposed-widget .form-submit{
+    margin-top: 1.85rem;
+}
+
